# bulletin

./: .gitignore  Cargo.toml  IMPLEMENTATION-ROADMAP.md  M2-HANDOFF.md  M3-HANDOFF.md  README.md  deny.toml  digest-data-sources.md  digest-local-ml-options.md  digest-scorer-and-eval.md  digest-service-api.md  digest-system-design.md  digest-technical-architecture.md  digest-thread-layer.md  digest-web-frontend.md  flake.nix
.github/workflows/: ci.yml
crates/bulletin/: Cargo.toml  build.rs
crates/bulletin/proto/bulletin/v1/: bulletin.proto
crates/bulletin/src/: build.rs  debug.rs  digest.rs  email.rs  main.rs  metric.rs  secrets.rs  serve.rs  transport.rs  webhook.rs  worker.rs
crates/bulletin/src/api/: admin.rs  auth.rs  convert.rs  error.rs  mod.rs
crates/connectors/: Cargo.toml
crates/connectors/src/: lib.rs  rss.rs
crates/connectors/tests/: rss.rs
crates/core/: Cargo.toml
crates/core/migrations/: 20200101000001_init.sql  20200101000004_subscriber.sql  20200101000005_cluster.sql  20200101000007_subscriber_timezone.sql  20200101000008_recurrence.sql  20200101000009_lookback.sql  20200101000010_subscriber_name.sql  20200101000011_webhook_routing.sql  20200101000012_private_scope.sql  20200101000013_scoped_fingerprint.sql  20200101000014_connection_owner.sql  20200101000015_private_build_watermark.sql  20200101000016_candidate_lookback_index.sql  20200101000017_cluster_entities.sql  20200101000018_story.sql  20200101000019_rls.sql  20200101000020_rls_control_plane.sql  20200101000021_thread_layer.sql  20200101000022_scoring_rollups.sql  20200101000023_scoring_config.sql  20200101000024_resurface.sql  20200101000025_thread_entities_array.sql  20200101000026_corroboration_weight.sql  20200101000026_digest_candidates.sql  20200101000027_cluster_summary.sql  20200101000028_thread_summary.sql  20200101000029_story_summary.sql  20200101000030_digest_lead.sql  20200101000031_summary_health.sql  20200101000032_resurface_cap.sql  20200101000032_source_subscriptions.sql  20200101000033_event_full_text.sql  20200101000034_event_full_text.sql  20200101000035_event_enriched.sql  20200101000036_salience_and_thread_cap.sql
crates/core/src/: cluster.rs  connector.rs  event.rs  feedback.rs  id.rs  kind.rs  lib.rs  scope.rs  select.rs
crates/core/src/cluster/: mod.rs  store.rs
crates/core/src/common/: db.rs  entity.rs  event.rs  fingerprint.rs  kind.rs  link_safety.rs  mod.rs  salience.rs  scope.rs  secret.rs  status.rs  watermark.rs
crates/core/src/digest/: eval.rs  greeting.rs  mod.rs  render.rs  select.rs  store.rs  subscriber.rs
crates/core/src/enrich/: client.rs  mod.rs  store.rs
crates/core/src/identity/: mod.rs  store.rs
crates/core/src/ingest/: fetch.rs  html_text.rs  mod.rs  realtime.rs  rss.rs  store.rs
crates/core/src/ingest/github/: app.rs  event_map.rs  mod.rs  token.rs  webhook.rs
crates/core/src/link/: mod.rs  store.rs
crates/core/src/subscription/: mod.rs
crates/core/src/summarize/: client.rs  metric.rs  mod.rs  store.rs
crates/core/src/thread/: maintain.rs  mod.rs  store.rs
crates/core/tests/: connection.rs  event.rs  github.rs  pipeline.rs  poll_rss.rs  rss.rs  thread.rs  webhook.rs
crates/core/tests/fixtures/: github_app_test_key.pem
crates/store/: Cargo.toml
crates/store/migrations/: 0002_event.sql  20200101000003_connection.sql  20200101000006_digest.sql
crates/store/src/: cluster.rs  connection.rs  digest.rs  event.rs  lib.rs  status.rs  subscriber.rs
crates/store/tests/: connection.rs  event.rs  pipeline.rs  poll_rss.rs
docs/: README.md  data-sources.md  github-events.md  llm-summarization-handoff.md  llm-summarization.md  local-ml-options.md  operating-eval.md  roadmap.md  system-design.md  technical-architecture.md  thread-layer.md  web-frontend.md
docs/mockups/: item-redesign.html  kicker-mockup.html
nix/: module.nix
nix/test/: fake-llama-server.py  llama-egress.nix
ops/: wipe-db.sh
ops/grafana/: README.md  bulletin-overview.json
