[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/store",
    "crates/connectors",
    "crates/bulletin",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid        = { version = "1", features = ["v7", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
sha2        = "0.10"
clap        = { version = "4", features = ["derive"] }
axum        = "0.7"
tower-http  = { version = "0.5", features = ["trace"] }
sqlx        = { version = "0.8", features = ["postgres", "uuid", "chrono", "runtime-tokio"] }
cron        = "0.16"
apalis          = { version = "=1.0.0-rc.9" }
apalis-postgres = { version = "=1.0.0-rc.8" }
apalis-cron     = { version = "=1.0.0-rc.8" }
proptest    = "1"
testcontainers         = { version = "0.27" }
testcontainers-modules = { version = "0.15", features = ["postgres"] }
