[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/bulletin",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
metrics     = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = ["http-listener"] }
uuid        = { version = "1", features = ["v7", "serde"] }
chrono      = { version = "0.4", features = ["serde"] }
chrono-tz   = "0.10"  # IANA tz lookup for rendering a digest's date in the subscriber's zone
sha2        = "0.10"
hmac        = "0.12"  # webhook HMAC-SHA256 signature verification (GitHub X-Hub-Signature-256)
hex         = "0.4"   # decode the hex-encoded webhook signature
# Credential-at-rest (M2 Phase 5). In-memory redaction/zeroize + interim envelope encryption
# (single app master key + XChaCha20-Poly1305 over a per-secret DEK), and the real GitHub App
# JWT→installation-token mint (RS256). `creds_ref` + wrapped-DEK indirection survives a managed-KMS swap.
secrecy           = "0.10"  # redacted Debug + zeroize-on-drop secret wrappers; explicit .expose_secret()
zeroize           = "1.8"   # scrub plaintext key material from memory on drop
chacha20poly1305  = "0.10"  # XChaCha20-Poly1305 AEAD for the at-rest envelope (24-byte nonce, misuse-resistant)
jsonwebtoken      = "9"     # RS256 app JWT for the GitHub App → installation-token exchange
base64            = "0.22"  # encode the sealed envelope + master key as transportable text
ulid        = "1"  # read enqueue time from the apalis TaskId for job wait/run timing
clap        = { version = "4", features = ["derive", "env"] }
axum        = "0.7"
sqlx        = { version = "0.8", features = ["postgres", "uuid", "chrono", "runtime-tokio"] }
cron        = "0.16"
apalis          = { version = "=1.0.0-rc.9" }
apalis-postgres = { version = "=1.0.0-rc.8" }
apalis-cron     = { version = "=1.0.0-rc.8" }
anyhow      = "1"
proptest    = "1"
reqwest          = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rss              = "2"
atom_syndication = "0.12"
lettre           = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "file-transport", "tokio1", "tokio1-rustls-tls"] }
testcontainers         = { version = "0.27" }
testcontainers-modules = { version = "0.15", features = ["postgres"] }
