[package]
name    = "bulletin"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "bulletin"
path = "src/main.rs"

[features]
default = ["thread-weighting"]
# Forwards to `bulletin-core/thread-weighting` and additionally gates the maintenance enqueue in the
# worker tick. Build the binary with `--no-default-features` to disable the Thread layer entirely.
thread-weighting = ["bulletin-core/thread-weighting"]

[dependencies]
# default-features = false so the binary's own `thread-weighting` feature is the single switch that
# turns the layer on/off in core (otherwise core's default would force it on regardless).
bulletin-core   = { path = "../core", default-features = false }
anyhow          = { workspace = true }
clap            = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
metrics         = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
axum            = { workspace = true }
sqlx            = { workspace = true }
uuid            = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
apalis          = { workspace = true }
apalis-postgres = { workspace = true }
apalis-cron     = { workspace = true }
cron            = { workspace = true }
chrono          = { workspace = true }
lettre          = { workspace = true }
ulid            = { workspace = true }
