[package]
name    = "bulletin"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "bulletin"
path = "src/main.rs"

[dependencies]
bulletin-core   = { path = "../core" }
anyhow          = { workspace = true }
clap            = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
metrics         = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
axum            = { workspace = true }
sqlx            = { workspace = true }
uuid            = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
apalis          = { workspace = true }
apalis-postgres = { workspace = true }
apalis-cron     = { workspace = true }
cron            = { workspace = true }
chrono          = { workspace = true }
lettre          = { workspace = true }
ulid            = { workspace = true }
secrecy         = { workspace = true }  # expose unsealed secret bytes at the startup wiring seam
