[package]
name    = "bulletin"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "bulletin"
path = "src/main.rs"

[features]
default = ["thread-weighting"]
# Forwards to `bulletin-core/thread-weighting` and additionally gates the maintenance enqueue in the
# worker tick. Build the binary with `--no-default-features` to disable the Thread layer entirely.
thread-weighting = ["bulletin-core/thread-weighting"]

[dependencies]
# default-features = false so the binary's own `thread-weighting` feature is the single switch that
# turns the layer on/off in core (otherwise core's default would force it on regardless).
bulletin-core   = { path = "../core", default-features = false }
anyhow          = { workspace = true }
clap            = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
metrics         = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
axum            = { workspace = true }
sqlx            = { workspace = true }
uuid            = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
apalis          = { workspace = true }
apalis-postgres = { workspace = true }
apalis-cron     = { workspace = true }
apalis-sql      = { workspace = true }
cron            = { workspace = true }
chrono          = { workspace = true }
lettre          = { workspace = true }
ulid            = { workspace = true }
secrecy         = { workspace = true }  # expose unsealed secret bytes at the startup wiring seam
# gRPC service API (`bulletin api` role). The proto contract lives in proto/, compiled by build.rs.
tonic            = { workspace = true }
tonic-prost      = { workspace = true }
tonic-reflection = { workspace = true }
tonic-health     = { workspace = true }
prost            = { workspace = true }
prost-types      = { workspace = true }
sha2             = { workspace = true }  # hash API bearer tokens (subscriber plane, A2)

[build-dependencies]
tonic-prost-build = { workspace = true }
protox            = { workspace = true }
prost             = { workspace = true }
