[package]
name    = "bulletin-core"
version.workspace = true
edition.workspace = true
publish = false

[features]
default = ["thread-weighting"]
# The compile-time kill switch for the Thread layer's *consumption* on the digest hot path: the
# relevance term and fire-time thread-assignment (docs/thread-layer.md §5.2). Build with
# `--no-default-features` to take that path off the build entirely; the deterministic recency digest
# is unaffected. (The `thread_maintenance` write side is harmless either way.)
thread-weighting = []
# Phase A of LLM summarization (docs/llm-summarization.md §2.5): compiles in the write-side,
# best-effort cluster summarization sweep and its local-sidecar HTTP client. **Off by default** — the
# deterministic baseline ships and the whole feature (including the client) compiles out, mirroring
# `thread-weighting`. The pure logic (content hash, faithfulness gate, prompt/schema, deterministic
# fallback) is always compiled and unit-tested regardless of the feature; only the DB sweep and the
# network call are gated. No new dependency: the client rides the existing `reqwest`.
llm-summarization = []

[dependencies]
anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
uuid        = { workspace = true }
chrono      = { workspace = true }
chrono-tz   = { workspace = true }
sha2        = { workspace = true }
hmac        = { workspace = true }
hex         = { workspace = true }
secrecy           = { workspace = true }
zeroize           = { workspace = true }
chacha20poly1305  = { workspace = true }
jsonwebtoken      = { workspace = true }
base64            = { workspace = true }
sqlx        = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
reqwest          = { workspace = true }
rss              = { workspace = true }
atom_syndication = { workspace = true }
lettre           = { workspace = true }

[dev-dependencies]
proptest               = { workspace = true }
axum                   = { workspace = true }
hmac                   = { workspace = true }  # tests compute a valid webhook signature to verify against
hex                    = { workspace = true }
sha2                   = { workspace = true }
uuid                   = { workspace = true, features = ["v4"] }  # tests build random ids
testcontainers         = { workspace = true }
testcontainers-modules = { workspace = true }
