[package]
name    = "bulletin-store"
version.workspace = true
edition.workspace = true

[dependencies]
bulletin-core = { path = "../core", features = ["sqlx"] }
sqlx          = { workspace = true }
uuid          = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }

[dev-dependencies]
bulletin-core          = { path = "../core" }
chrono                 = { workspace = true }
testcontainers         = { workspace = true }
testcontainers-modules = { workspace = true }
